# create-vue-monorepo-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/dialoguers/: dialoguer_work.rs  mod.rs  termcolor_work.rs
src/render/: main_render.rs  mod.rs
src/utils/: deep_merge.rs  deep_merger.rs  dialoguer_work.rs  get_command.rs  mod.rs  render.rs  sort_dependencied.rs
template/base/: README.md  create-vue-project-note.md  pnpm-lock.yaml
template/config/eslint/: .eslintrc.cjs  package.json
template/config/vitest/: _gitignore  package.json
