[package]
name = "create-vue-monorepo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = "0.10.3"
tempfile = "3.5.0"
thiserror = "1.0.40"
console = "0.15.5"
regex = "1.7.3"
serde = { version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
serde_derive = "1.0.159"
